test/mpi/errors/f90/Makefile.sm
SUBDIRS = 

# A special testing target to simplify testing just the F90 code
testing:
	../../runtests -srcdir=$(srcdir) -tests=testlist \
		   -mpiexec=$(bindir)/mpiexec \
		   -xmlfile=summary.xml

